deploy/manifest/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/rhdemo/2021-shiptracker.git
    app.quarkus.io/build-timestamp: 2021-02-15 - 17:06:59 +0000
    app.quarkus.io/commit-id: bf083d834f7b2fbbd98d7246e20c2d75478fe540
  labels:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: ship-tracker
  name: ship-tracker
  namespace: ship-tracker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.kubernetes.io/name: ship-tracker
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/rhdemo/2021-shiptracker.git
        app.quarkus.io/build-timestamp: 2021-02-15 - 17:06:59 +0000
        app.quarkus.io/commit-id: bf083d834f7b2fbbd98d7246e20c2d75478fe540
      labels:
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: ship-tracker
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: sebi2706/ship-tracker:v3
        imagePullPolicy: Always
        name: ship-tracker
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
