deploy/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ship-tracker
  namespace: ship-tracker-app
  labels:
    name: ship-tracker
    app.kubernetes.io/name: ship-tracker
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: ship-tracker
    app.kubernetes.io/name: ship-tracker
